--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 32
     defaultConfig {
-        applicationId "com.codingwithmitch.kotlinrecyclerviewexample"
+        applicationId "com.putri.flowergalery"
         minSdkVersion 21
         targetSdkVersion 32
         versionCode 1
